chore: Update project dependencies and UI assets
- Remove date-fns from root package.json
- Add date-fns to frontend package.json
- Update documentation images with new screenshots
- Modify mock medical reports data
- Enhance icon component with regular/solid icon styles
- Refactor tab navigation and report item components

--- a/frontend/src/common/components/Router/TabNavigation.scss
+++ b/frontend/src/common/components/Router/TabNavigation.scss
@@ -7,8 +7,8 @@
     --background: #ffffff;
     
     &-button {
-      --color: #4765ff;
-      --color-selected: #e83e8c;
+      --color: #435FF0;
+      --color-selected: #fd7bf4;
       
       &-icon {
         margin: 0;
