--- a/frontend/src/pages/Auth/ForgotPassword/components/ForgotPasswordForm.scss
+++ b/frontend/src/pages/Auth/ForgotPassword/components/ForgotPasswordForm.scss
@@ -2,19 +2,19 @@
   padding: 1rem;
 
   &__input {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
   }
 
   &__button {
-    margin-top: 16px;
+    margin-top: 1rem;
   }
 
   &__message {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
   }
 
   &__success {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
     text-align: center;
   }
 } 
