--- a/frontend/src/pages/Auth/ResetPassword/components/ResetPasswordForm.scss
+++ b/frontend/src/pages/Auth/ResetPassword/components/ResetPasswordForm.scss
@@ -2,18 +2,18 @@
   padding: 1rem;
 
   &__input {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
   }
 
   &__button {
-    margin-top: 16px;
+    margin-top: 1rem;
   }
 
   &__message {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 0.5rem;
   }
 
   &__email {
@@ -21,7 +21,7 @@
   }
 
   &__success {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
     text-align: center;
   }
 } 
