--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -8,4 +8,12 @@ http://ionicframework.com/docs/theming/ */
   --ls-breakpoint-md: 768px;
   --ls-breakpoint-lg: 992px;
   --ls-breakpoint-xl: 1200px;
+
+  --ion-color-primary: #0054e9;
+  --ion-color-primary-rgb: 0, 84, 233;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #0049c7;
+  --ion-color-primary-tint: #1a64e0;
+  
 }
