--- a/frontend/src/pages/Auth/SignUp/SignUpPage.scss
+++ b/frontend/src/pages/Auth/SignUp/SignUpPage.scss
@@ -4,7 +4,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding-top: 1rem;
   }
 
   .ls-signup-page__form {
