--- a/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
+++ b/frontend/src/pages/Auth/SignUp/components/SignUpForm.scss
@@ -2,30 +2,30 @@
   padding: 1rem;
 
   .ls-signup-form__input {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
   }
 
   .ls-signup-form__button {
-    margin-top: 16px;
+    margin-top: 1rem;
   }
 
   &__password-guidelines {
-    margin-top: -8px;
-    margin-bottom: 16px;
+    margin-top: -0.5rem;
+    margin-bottom: 1rem;
     font-size: 0.85rem;
     
     &-header {
-      margin-bottom: 4px;
+      margin-bottom: 0.25rem;
       font-weight: 500;
     }
     
     &-item {
       display: flex;
       align-items: center;
-      margin-bottom: 2px;
+      margin-bottom: 0.125rem;
       
       &-icon {
-        margin-right: 6px;
+        margin-right: 0.375rem;
       }
       
       &-valid {
