--- a/frontend/src/common/components/Chat/ChatContainer.scss
+++ b/frontend/src/common/components/Chat/ChatContainer.scss
@@ -16,4 +16,9 @@
     text-align: center;
     padding: 0 2rem;
   }
+  
+  /* Force all direct children to align left */
+  & > * {
+    align-self: flex-start;
+  }
 } 
