--- a/frontend/src/common/components/Chat/ChatMessage.scss
+++ b/frontend/src/common/components/Chat/ChatMessage.scss
@@ -1,8 +1,9 @@
 .chat-message {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   max-width: 90%;
   margin-bottom: 0.75rem;
+  align-self: flex-start;
   
   .message-content {
     padding: 0.75rem 1rem;
@@ -16,22 +17,16 @@
   }
   
   &.user-message {
-    align-self: flex-end;
-    
     .message-content {
-      background-color: var(--ion-color-primary);
-      color: var(--ion-color-primary-contrast);
-      border-bottom-right-radius: 0.25rem;
+      background-color: #EBECFD;
+      color: var(--ion-color-dark);
     }
   }
   
   &.assistant-message {
-    align-self: flex-start;
-    
     .message-content {
-      background-color: var(--ion-color-light);
+      background-color: #FFFFFF;
       color: var(--ion-color-dark);
-      border-bottom-left-radius: 0.25rem;
     }
   }
   
@@ -40,26 +35,31 @@
     width: 1.5rem;
     height: 1.5rem;
     border-radius: 50%;
-    margin-bottom: 0.25rem;
+    margin-right: 0.5rem;
+    align-self: flex-start;
     
     &.user-avatar {
-      align-self: flex-end;
-      margin-right: 0.25rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      ion-icon {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+
     }
     
     &.assistant-avatar {
-      align-self: flex-start;
-      margin-left: 0.25rem;
-      background-color: var(--ion-color-primary);
       display: flex;
       align-items: center;
       justify-content: center;
       
-      svg, img {
-        width: 1rem;
-        height: 1rem;
-        filter: brightness(0) invert(1);
+      svg, img, ion-icon {
+        width: 1.5rem;
+        height: 1.5rem;
       }
+
     }
   }
 }
