--- a/frontend/src/pages/Chat/ChatPage.scss
+++ b/frontend/src/pages/Chat/ChatPage.scss
@@ -16,6 +16,10 @@
   
   .ai-assistant-title-icon {
     height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2rem;
+    margin-right: 0.75rem;
+    color: var(--ion-color-primary);
   }
   
   .title-container {
