--- a/frontend/src/pages/Auth/SignIn/SignInPage.scss
+++ b/frontend/src/pages/Auth/SignIn/SignInPage.scss
@@ -1,9 +1,63 @@
 .ls-signin-page {
-  &__container {
-    max-width: 576px;
+  --ion-background-color: #1a233f;
+  
+  &__background {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1.5rem;
+  }
+
+  &__logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2.5rem;
+  }
+
+  &__logo {
+    width: 3.5rem;
+    height: auto;
+    margin-right: 0.75rem;
+  }
+  
+  &__logo-text {
+    color: white;
+    font-size: 1.75rem;
+    font-weight: 600;
+  }
+
+  &__card {
+    width: 100%;
+    max-width: 30rem;
+    background-color: white;
+    border-radius: 1.5rem;
+    padding: 2.5rem 2rem;
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+  }
+  
+  &__header {
+    margin-bottom: 2.5rem;
+    
+    h1 {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 0.5rem;
+      margin-top: 0;
+    }
+    
+    p {
+      font-size: 1.125rem;
+      color: #666;
+      margin: 0;
+    }
   }
 
   &__form {
-    margin: 2rem 0;
+    width: 100%;
+    margin: 0;
   }
 }
