--- a/frontend/src/pages/Auth/SignIn/components/SignInForm.scss
+++ b/frontend/src/pages/Auth/SignIn/components/SignInForm.scss
@@ -1,14 +1,185 @@
 .ls-signin-form {
+  &__field {
+    margin-bottom: 1.5rem;
+  }
+  
+  &__label {
+    display: block;
+    font-size: 1rem;
+    color: #333;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+  }
+
   &__input {
-    margin-bottom: 1rem;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 0.75rem;
+    --padding-start: 1rem;
+    --padding-end: 1rem;
+    --padding-top: 0.875rem;
+    --padding-bottom: 0.875rem;
+    --highlight-color: var(--ion-color-primary);
+    margin-bottom: 0;
+    font-size: 1rem;
+    height: 3.25rem;
+    
+    &::part(native) {
+      padding: 0;
+    }
+  }
+
+  &__remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+  
+  &__remember {
+    display: flex;
+    align-items: center;
   }
 
   &__input-checkbox {
-    font-size: 0.75rem;
+    font-size: 0.875rem;
+    display: flex;
+    align-items: center;
+    
+    &::part(container) {
+      border-radius: 0.25rem;
+      border: 1px solid #ccc;
+      width: 1.25rem;
+      height: 1.25rem;
+      margin-right: 0.5rem;
+    }
+    
+    &::part(mark) {
+      width: 0.75rem;
+      height: 0.5rem;
+    }
+
+    &::part(label) {
+      margin-inline-start: 0;
+    }
+  }
+
+  &__forgot-link {
+    color: #4261eb;
+    text-decoration: none;
+    font-size: 0.750rem;
+    font-weight: 500;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   &__button {
-    margin-top: 2rem;
+    margin-bottom: 2rem;
+    --border-radius: 0.75rem;
+    --padding-top: 1rem;
+    --padding-bottom: 1rem;
+    font-weight: 500;
+    --background: #4261eb;
+    --background-activated: #3a56d4;
+    --background-hover: #3a56d4;
+    font-size: 1rem;
+    height: 3.25rem;
+  }
+  
+  &__divider {
+    position: relative;
+    text-align: center;
+    margin: 1.5rem 0;
+    
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 40%;
+      height: 1px;
+      background-color: #e0e0e0;
+    }
+    
+    &::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 50%;
+      width: 40%;
+      height: 1px;
+      background-color: #e0e0e0;
+    }
+    
+    span {
+      display: inline-block;
+      padding: 0 0.5rem;
+      background-color: white;
+      position: relative;
+      z-index: 1;
+      color: var(--ion-color-medium);
+      font-size: 0.875rem;
+    }
+  }
+  
+  &__social {
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  
+  &__social-button {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.75rem;
+    border-radius: 0.5rem;
+    border: 1px solid #e0e0e0;
+    background-color: white;
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #333;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    
+    &:hover {
+      background-color: #f5f5f5;
+    }
+    
+    &--google {
+      .ls-signin-form__social-icon {
+        color: #4285F4;
+        margin-right: 0.5rem;
+        font-weight: bold;
+      }
+    }
+    
+    &--apple {
+      .ls-signin-form__social-icon {
+        margin-right: 0.5rem;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+
+  &__signup {
+    text-align: center;
+    font-size: 1rem;
+    color: #666;
+
+    a {
+      color: #4261eb;
+      text-decoration: none;
+      font-weight: 600;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
 
