--- a/frontend/src/pages/Auth/ResetPassword/ResetPasswordPage.scss
+++ b/frontend/src/pages/Auth/ResetPassword/ResetPasswordPage.scss
@@ -4,11 +4,21 @@
     flex-direction: column;
     height: 100%;
     justify-content: center;
+    background: radial-gradient(
+      circle at 50% 50%,
+      rgba(12, 15, 34, 0.8) 0%,
+      rgba(32, 44, 75, 0.83) 77.64%,
+      rgba(23, 33, 86, 0.6) 100%
+    );
   }
 
   &__form {
     width: 100%;
     max-width: 31.25rem;
     margin: 0 auto;
+  }
+
+  ion-content {
+    --background: transparent;
   }
 } 
