--- a/frontend/src/pages/Auth/SignIn/SignInPage.scss
+++ b/frontend/src/pages/Auth/SignIn/SignInPage.scss
@@ -1,5 +1,5 @@
 .ls-signin-page {
-  --ion-background-color: #1a233f;
+  --ion-background-color: var(--ion-color-background);
   
   &__background {
     width: 100%;
