--- a/frontend/src/pages/Home/components/NoReportsMessage/NoReportsMessage.scss
+++ b/frontend/src/pages/Home/components/NoReportsMessage/NoReportsMessage.scss
@@ -51,7 +51,7 @@
     &--secondary {
       --background: white;
       --color: var(--ion-color-primary);
-      --border-color: var(--ion-color-light);
+      --border-color: var(--ion-color-primary);
     }
   }
 } 
